--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   image_picker: ^0.6.7+22
   permission_handler: ^5.0.1+1
   image_cropper: ^1.3.1
+  google_sign_in: ^4.5.9
   firebase_messaging: ^7.0.3
 
 #  syncfusion_flutter_calendar: ^18.4.43
@@ -71,6 +72,11 @@ flutter:
   assets:
     - assets/applogo.png
     - assets/somin.png
+    - assets/faces/happy.png
+    - assets/faces/angry.png
+    - assets/faces/normal.png
+    - assets/faces/sad.png
+    - assets/faces/shock.png
   #   - images/a_dot_ham.jpeg
 
 
