--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -72,6 +72,7 @@ flutter:
   assets:
     - assets/applogo.png
     - assets/somin.png
+    - assets/background.png
     - assets/faces/happy.png
     - assets/faces/angry.png
     - assets/faces/normal.png
